# matriklar

./: .gitignore  README.md  data_fetcher.py  main.ipynb  main.py  matriklar.csv  matriklar_with_owners.csv  owner_scraper.py  pyproject.toml
