[project]
name = "matriklar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "black>=25.1.0",
    "requests>=2.32.3",
    "ruff>=0.11.8",
    "selenium>=4.32.0",
    "webdriver-manager>=4.0.2",
]

[tool.setuptools]
py-modules = ["main", "data_fetcher", "owner_scraper"]